add search book and booked book, fixed small bugs